--- a/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/List.cshtml
@@ -40,45 +40,43 @@
         </td>
     </tr>
 </table>
+
 <p></p>
+
 <table class="adminContent">
     <tr>
         <td>
             @(Html.Telerik().Grid<ManufacturerModel>(Model.Manufacturers.Data)
-                    .Name("manufacturers-grid")
-                    .ClientEvents(events => events
-                        .OnDataBinding("onDataBinding"))
-                    .Columns(columns =>
-                    {
-                        columns.Bound(x => x.Name).Width(300)
-                            .Template(x => Html.ActionLink(x.Name, "Edit", new { id = x.Id }))
-                            .ClientTemplate("<a href=\"Edit/<#= Id #>\"><#= Name #></a>");
-                        
-                            // .Template(x => Html.ActionLink(x.Name, "Edit", new { id = x.Id }))
-                            //.ClientTemplate("<a href=\"Edit/<#= Id #>'><#= Name #></a>");
-                        
-                        columns.Bound(x => x.Published)
-                            .Width(100)
-                            .Template(item => @Html.SymbolForBool(item.Published))
-                            .ClientTemplate(@Html.SymbolForBool("Published"))
-                            .Centered();
-                        columns.Bound(x => x.DisplayOrder)
-                            .Width(100)
-                            .Centered();
-                        columns.Bound(x => x.Id)
-                            .Width(50)
-                            .Centered()
-                            .Template(x => Html.ActionLink(T("Admin.Common.Edit").Text, "Edit", new { id = x.Id }))
-                            .ClientTemplate("<a href=\"Edit/<#= Id #>\">" + T("Admin.Common.Edit").Text + "</a>")
-                            .Title(T("Admin.Common.Edit").Text);
-                    })
-                    .Pageable(settings => settings.Total(Model.Manufacturers.Total).PageSize(gridPageSize).Position(GridPagerPosition.Both))
-                    .DataBinding(dataBinding => dataBinding.Ajax().Select("List", "Manufacturer"))
+					.Name("manufacturers-grid")
+					.ClientEvents(events => events
+						.OnDataBinding("onDataBinding"))
+					.Columns(columns =>
+					{
+						columns.Bound(x => x.Name)
+							.Template(x => Html.ActionLink(x.Name, "Edit", new { id = x.Id }))
+							.ClientTemplate("<a href=\"Edit/<#= Id #>\"><#= Name #></a>");
+						columns.Bound(x => x.Published)
+							.Width(160)
+							.Template(item => @Html.SymbolForBool(item.Published))
+							.ClientTemplate(@Html.SymbolForBool("Published"))
+							.Centered();
+						columns.Bound(x => x.DisplayOrder)
+							.Width(160)
+							.Centered();
+						columns.Bound(x => x.LimitedToStores)
+							.Width(160)
+							.Template(item => @Html.SymbolForBool(item.LimitedToStores))
+							.ClientTemplate(@Html.SymbolForBool("LimitedToStores"))
+							.Centered();
+					})
+					.Pageable(settings => settings.Total(Model.Manufacturers.Total).PageSize(gridPageSize).Position(GridPagerPosition.Both))
+					.DataBinding(dataBinding => dataBinding.Ajax().Select("List", "Manufacturer"))
 					.PreserveGridState()
-                    .EnableCustomBinding(true))
+					.EnableCustomBinding(true))
         </td>
     </tr>
 </table>
+
 <script type="text/javascript">
     $(document).ready(function () {
         //search button
