--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/Edit.cshtml
@@ -25,7 +25,7 @@
 				}
 				@if (Model.LogFileExists)
 				{
-					<a href="@Url.Action("DownloadLogFile", new { id = Model.Id })" class="btn">
+					<a href="@Url.Action("DownloadLogFile", new { id = Model.Id })" class="btn" download>
 						<i class="fa fa-file-text-o"></i>&nbsp;@T("Admin.Configuration.ActivityLog")
 					</a>
 				}
