Monstrous commit :-) * New type conversion system (replaces oldschool TypeDescriptor) * CsvDataReader * CsvWriter * ExcelDataReader * IDataTable: lightweigt adapter for IDataReader. Used in ImportManager to abstract the data source (previously only Excel, now CSV in addition) * Fixes #812 * ObjectDumper util class (can dump any object type to string, good for testing) * A lot of code optimizing

--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/List.cshtml
@@ -390,9 +390,9 @@
 				</div>
 
 				<div id="importexcel-upload" class="control-group">
-					<label class="control-label" for="importexcelfile">@T("Admin.Common.ExcelFile"):</label>
+					<label class="control-label" for="importfile">@T("Admin.Common.ExcelFile"):</label>
 					<div class="controls">
-						<input type="file" id="importexcelfile" name="importexcelfile" />
+						<input type="file" id="importfile" name="importfile" />
 					</div>
 				</div>
 				
