--- a/src/Presentation/SmartStore.Web/Administration/Views/ContentSlider/Index.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ContentSlider/Index.cshtml
@@ -13,10 +13,14 @@
 			@T("Admin.Configuration.ContentSlider")
 		</div>
 		<div class="options">
+			@Html.Widget("admin_button_toolbar_before")
+
 			<button type="submit" name="save" value="save" class="btn btn-primary">
 				<i class="fa fa-check"></i>
 				@T("Admin.Common.Save")
 			</button>
+
+			@Html.Widget("admin_button_toolbar_after")
 		</div>
 	</div>
 
