--- a/src/Presentation/SmartStore.Web/Administration/Views/MessageTemplate/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/MessageTemplate/List.cshtml
@@ -10,6 +10,9 @@
         @T("Admin.ContentManagement.MessageTemplates")
     </div>
     <div class="options">
+		@Html.Widget("admin_button_toolbar_before")
+
+		@Html.Widget("admin_button_toolbar_after")
     </div>
 </div>
 
