--- a/src/Presentation/SmartStore.Web/Administration/Views/News/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/News/List.cshtml
@@ -13,11 +13,15 @@
         @T("Admin.ContentManagement.News.NewsItems")
     </div>
     <div class="options">
+		@Html.Widget("admin_button_toolbar_before")
+
 		<button type="submit" id="delete-selected" name="delete-selected" value="delete_selected" class="btn btn-danger">
 			<i class="fa fa-trash-o"></i>&nbsp;@T("Admin.Common.Delete.Selected")
 		</button>
 
         <a href="@Url.Action("Create")" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@T("Admin.Common.AddNew")</a>
+
+		@Html.Widget("admin_button_toolbar_after")
     </div>
 </div>
 
