--- a/src/Presentation/SmartStore.Web/Administration/Views/NewsLetterSubscription/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/NewsLetterSubscription/List.cshtml
@@ -10,12 +10,17 @@
         @T("Admin.Promotions.newsLetterSubscriptions")
     </div>
     <div class="options">
-        <a href="@Url.Action("ExportCsv")" class="btn">
+		@Html.Widget("admin_button_toolbar_before")
+
+        @*<a href="@Url.Action("ExportCsv")" class="btn">
 			<i class="fa fa-arrow-circle-o-down"></i>&nbsp;@T("Admin.Common.ExportToCsv")
-		</a>
+		</a>*@
+
         <a href="#importcsv-window" data-toggle="modal" class="btn">
 			<i class="fa fa-arrow-circle-o-up"></i>&nbsp;@T("Admin.Common.ImportFromCsv")
 		</a>
+
+		@Html.Widget("admin_button_toolbar_after")
     </div>
 </div>
 
