--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/List.cshtml
@@ -1,11 +1,5 @@
 ﻿@model ProductListModel
 @using Telerik.Web.Mvc.UI
-
-@* 
-    TODO: (MC) clean out comments 
-    TODO: (MC) get thumbnail dims and set <img> width/height to prevent flickering (maybe max-width/height)
-*@
-
 @{
     var trueTemplate = "#if (Published) {# <img src='" + Url.Content("~/Administration/Themes/SmartStore/Content/images/checkmark.png") + "' /> #} #";
 	var allString = T("Admin.Common.All").Text;
@@ -20,18 +14,24 @@
             @T("Admin.Catalog.Products.Manage")
         </div>
         <div class="options btn-toolbar">
+			@Html.Widget("admin_button_toolbar_before")
+
             <a href="@Url.Action("Create")" class="btn btn-primary">
                 <i class="fa fa-plus"></i>
                 @T("Admin.Common.AddNew")
             </a>
 
-            <div class="btn-group" style="vertical-align: middle">
+			<button type="submit" id="delete-selected" class="btn btn-danger">
+				<i class="fa fa-trash-o"></i>
+				@T("Admin.Common.Delete.Selected")
+			</button>
+
+            @*<div class="btn-group" style="vertical-align: middle">
 				<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
 					@T("Common.Export")
 					<span class="fa fa-caret-down"></span>
 				</a>
                 <ul class="dropdown-menu export-catalog">
-                    @Html.Widget("admin_menu_exportcatalog_top")
 					<li>
                         <a href="@Url.Action("ExportXmlAll")">
                             <i class="fa fa-fw fa-code"></i>
@@ -79,18 +79,38 @@
                             </a>
                         </li>
                     }
-					@Html.Widget("admin_menu_exportcatalog_bottom")
                 </ul>
-            </div>
+            </div>*@
 
             <a id="importexcel" href="#importexcel-window" class="btn" role="button">
 				<i class="fa fa-arrow-circle-o-up"></i>&nbsp;@T("Admin.Common.ImportFromExcel")
 			</a>
 
-            <button type="submit" id="delete-selected" class="btn btn-danger">
-				<i class="fa fa-trash-o"></i>
-				@T("Admin.Common.Delete.Selected")
-			</button>
+			@if (Model.DisplayPdfExport)
+			{
+				<div class="btn-group">
+					<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+						@T("Admin.Common.Export.PDF")
+						<span class="fa fa-caret-down"></span>
+					</a>
+					<ul class="dropdown-menu pull-right">
+						<li>
+							<a href="javascript:void(0)" class="export-form-post" data-url="@Url.Action("ExportPdf", new { all = false })">
+								<i class="fa fa-fw fa-file-pdf-o"></i>
+								@T("Admin.Common.ExportToPdf.Selected")
+							</a>
+						</li>
+						<li>
+							<a href="@Url.Action("ExportPdf", new { all = true })">
+								<i class="fa fa-fw fa-file-pdf-o"></i>
+								@T("Admin.Common.ExportToPdf.All")
+							</a>
+						</li>
+					</ul>
+				</div>
+			}
+
+			@Html.Widget("admin_button_toolbar_after")
         </div>
     </div>
 
